@@ -6,6 +6,12 @@
 SERVER_NAME Unnamed Server
 CM_LOCY -0.5
 
+# no play time
+PLAY_TIME_TOTAL 0
+PLAY_TIME_MULTIPLAYER 0
+PLAY_TIME_TEAM 0
+
+# default keyboard layout
 KEYBOARD	333	PLAYER_BIND	ZOOM_OUT	1
 KEYBOARD	332	PLAYER_BIND	ZOOM_IN	1
 KEYBOARD	327	PLAYER_BIND	BANK_DOWN	1
