@@ -227,6 +227,17 @@ PING_FLOOD_GLOBAL   .1    # The same times, multiplied by this value, count for 
 DEFAULT_KICK_TO_SERVER    # default server to kick/move to (IP or hostname)
 DEFAULT_KICK_TO_PORT 4534 # default port of the server to kick/move to
 
+# Minimal play time requirements. Clients starting from 0.2.8.3 record the play time
+# in three categories: total play time (all games count), online play time (games on
+# a server count) and team play time (only online games with teammates count).
+# With the following settings, you can keep players lacking experience in these
+# categories out of the game. Players not meeting the requirements will be forced
+# to spectate.
+
+MIN_PLAY_TIME_TOTAL  0.0 # required total play time in minutes
+MIN_PLAY_TIME_ONLINE 0.0 # required online play time in minutes
+MIN_PLAY_TIME_TEAM   0.0 # required team play time in minutes
+
 ############################################################################################
 #
 # Game settings
